Fixed small cookie related bug. Added moon icon for dark mode. Need to add/implement hover-over icons later to give feedback that icon is selected.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,14 +47,18 @@
         --accent: var(--light-gray);
         --text: var(--near-white);
         --selection: var(--medium-gray);
+        --contrast-icon: url("../images/moon.png");
     }
 
-    body, p {
+    body {
         /* Light mode */
         --background: var(--light-blue);
         --accent: var(--dark-blue);
         --text: var(--black-blue);
         --selection: var(--medium-blue);
+        --contrast-icon: var("../images/sun.png");
+
+        padding-bottom: 80px;
     }
 
     /* .lightMode {
@@ -77,10 +81,6 @@
         border-color: var(--text);
         border-width: 2px;
         height: 50px;
-    }
-
-    #contrastToggle {
-        float: right;
     }
 
 /***************************/
@@ -117,12 +117,17 @@
     }
 
     #nav-bar #contrastToggle {
+        float: right;
+
         border: none;
         outline: none;
         background-color: none;
         cursor: pointer;
 
+        content: var(--contrast-icon);
+
         margin-right: 10px;
+        margin-left: 10px;
         margin-top: 13px;
 
         width:20px;
@@ -374,7 +379,14 @@
 
     footer{
         overflow: hidden;
-        background-image: linear-gradient(var(--accent), var(--background));
+        background-image: linear-gradient( var(--accent), var(--background) );
+
+        position: fixed;
+        bottom: 0;
+        left: 0;
+
+        width: 100%;
+        height: 80px;
     }
 
     #footer-bar{
